--- a/Website/wwwroot/index.html
+++ b/Website/wwwroot/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Dashboard</title>
+    <title>RMS</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/">
@@ -52,6 +52,7 @@
     <![endif]-->
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+    <link rel="stylesheet" href="styles/menu.css" />
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
@@ -117,20 +118,27 @@
             function changeDisplay(item)
             {
 
-                var element = item.getElementsByClassName('treeview-menu')[0];
+                var element = item.querySelector(".treeview-menu");
                 var currentStyle = element.style.display;
+
+                var arrow =  item.querySelector(".pull-right-container").querySelector("i");
 
                 if (currentStyle === 'block')
                 {
                     element.style.display = 'none';
+                    arrow.classList.remove('fa-angle-up');
+                    arrow.classList.add('fa-angle-down');
+
                 }
                 else
                 {
                     element.style.display = 'block';
+                    arrow.classList.remove('fa-angle-down');
+                    arrow.classList.add('fa-angle-up');
                 }
-                             
+
             }
-            
+
         </script>
 
         <!-- Bootstrap 3.3.7 -->
